# filesort

./: README.md  filesort.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: pages.yml
docs/: index.html
