[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "filesort"
version = "1.0.0"
description = "📁 Intelligent File Organizer - Sort messy directories by type, date, or size"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["rich>=13.0.0"]

[project.scripts]
filesort = "filesort:main"

[project.urls]
Homepage = "https://github.com/yourusername/filesort"
"Buy me a coffee" = "https://ko-fi.com/yourusername"
"Gumroad" = "https://gumroad.com/l/filesort"
